--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+    <link rel="stylesheet" href="/Assets/Css/materialize.min.css">
     <link rel="stylesheet" href="/Assets/Css/style.css">
 
     <title>My project</title>
@@ -13,7 +13,7 @@
     <p>Hello World</p>
 
     <p>First project HTML CSS</p>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
+    <script src="/Assets/Js/materialize.min.js"></script>
     <script src="/Assets/Js/main.js"></script>
 </body>
 </html>
