--- a/index.html
+++ b/index.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="/Assets/Css/materialize.min.css">
-    <link rel="stylesheet" href="/Assets/Css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/Assets/materialize/css/materialize.min.css">
+    <link rel="stylesheet" href="/Assets/css/styles.css">
 
     <title>My project</title>
 </head>
 <body>
-    <p>Hello World</p>
+    <nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Logo</a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+      </ul>
+    </div>
+  </nav>
 
-    <p>First project HTML CSS</p>
-    <script src="/Assets/Js/materialize.min.js"></script>
-    <script src="/Assets/Js/main.js"></script>
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="sass.html">Sass</a></li>
+    <li><a href="badges.html">Components</a></li>
+    <li><a href="collapsible.html">Javascript</a></li>
+    <li><a href="mobile.html">Mobile</a></li>
+  </ul>
+    
+    <script src="/Assets/materialize/js/materialize.min.js"></script>
+    <script src="/Assets/js/app.js"></script>
 </body>
 </html>
