--- a/index.html
+++ b/index.html
@@ -1,37 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/Assets/materialize/css/materialize.min.css">
-    <link rel="stylesheet" href="/Assets/css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/Assets/materialize/css/materialize.min.css" />
+    <link rel="stylesheet" href="/Assets/css/styles.css" />
 
     <title>My project</title>
-</head>
-<body>
-    <nav>
-    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
-      </ul>
-    </div>
-  </nav>
+  </head>
+  <body>
+    <nav class="white z-depth-0">
+      <div class="nav-wrapper">
+        <a href="#!" class="blue-text">Home</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger blue-text"
+          ><i class="material-icons">menu</i></a
+        >
+        <ul class="right hide-on-med-and-down">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+          <li><a href="collapsible.html">Javascript</a></li>
+          <li><a href="mobile.html">Mobile</a></li>
+        </ul>
+      </div>
+    </nav>
 
-  <ul class="sidenav" id="mobile-demo">
-    <li><a href="sass.html">Sass</a></li>
-    <li><a href="badges.html">Components</a></li>
-    <li><a href="collapsible.html">Javascript</a></li>
-    <li><a href="mobile.html">Mobile</a></li>
-  </ul>
-    
+    <ul class="sidenav" id="mobile-demo">
+      <li>
+        <div class="user-view">
+          <div class="background">
+            <img src="/Assets/images/bg.jpg" class="w-full" />
+          </div>
+          <a href="#user"
+            ><img class="circle" src="/Assets/images/logo.png"
+          /></a>
+          <a href="#name"><span class="white-text name">Mohammadreza</span></a>
+          <a href="#email"
+            ><span class="white-text email">mohammad@email.com</span></a
+          >
+        </div>
+      </li>
+      <li>
+        <a href="#!"><i class="material-icons">link</i>Website</a>
+      </li>
+      <li>
+        <a href="#!"><i class="material-icons">info_outline</i>About us</a>
+      </li>
+      <li><div class="divider"></div></li>
+      <li><a class="subheader">Other...</a></li>
+      <li><a class="waves-effect" href="#!"><i class="material-icons">home</i>Home</a></li>
+      <li><a class="waves-effect" href="#!"><i class="material-icons">shop</i>Shop</a></li>
+      <li><a class="waves-effect" href="#!"><i class="material-icons">person</i>Profile</a></li>
+    </ul>
+
     <script src="/Assets/materialize/js/materialize.min.js"></script>
     <script src="/Assets/js/app.js"></script>
-</body>
+  </body>
 </html>
