--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <title>My project</title>
   </head>
   <body>
+
+    <!-- navbar (start) -->
     <nav class="white z-depth-0">
       <div class="nav-wrapper">
         <a href="#!" class="blue-text">Home</a>
@@ -56,6 +58,15 @@
       <li><a class="waves-effect" href="#!"><i class="material-icons">shop</i>Shop</a></li>
       <li><a class="waves-effect" href="#!"><i class="material-icons">person</i>Profile</a></li>
     </ul>
+    <!-- navbar (end) -->
+
+    <!-- home section (start) -->
+    <section>
+        <img src="/Assets/images/logo.png" alt="logo-png" class="w-full"/>
+        <a href="#!" class="waves-effect btn blue darken-3">Programming Tutorial</a>
+        <a href="#!" class="waves-effect btn blue darken-3">Users Managers</a>
+    </section>
+    <!-- home section (end) -->
 
     <script src="/Assets/materialize/js/materialize.min.js"></script>
     <script src="/Assets/js/app.js"></script>
